# gemi

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DISCLAIMER.md  INSTALL.md  LICENSE  README.md  SECURITY.md  _inline_svg_styles.py  _screenshot_gen.py  gemi.bat  gemi.ps1  pyproject.toml
.github/workflows/: ci.yml
examples/: .env.example  agents.example.json  hooks.example.json  mcp.example.json  permissions.example.json  profiles.example.json
examples/agent-template/: README.md  llama-server.json  start.ps1
gemi/: __init__.py  __main__.py  app.py  approval.py  autopilot_v2.py  background.py  cache.py  completion.py  config.py  cost.py  hooks.py  image_input.py  logger.py  mcp.py  orchestration.py  permissions.py  plugins.py  profiles.py  prompts.py  provider.py  query_engine.py  retry.py  session.py  workspace_context.py
gemi/commands/: __init__.py  registry.py
gemi/memory/: __init__.py  store.py
gemi/skills/: __init__.py  loader.py
gemi/templates/: __init__.py
gemi/tools/: __init__.py  _shell_common.py  agent_call.py  api_test.py  archive.py  base.py  base64_tool.py  bash.py  benchmark_tool.py  cipher.py  clipboard.py  cmd.py  code_analysis.py  crypto_tool.py  csv_tool.py  dependency_tool.py  diff.py  dns_tool.py  docker.py  dotenv_tool.py  download.py  encode_tool.py  env.py  exploits.py  file_copy.py  file_delete.py  file_edit.py  file_move.py  file_read.py  file_write.py  forensics_tool.py  free_apis.py  git.py  glob_tool.py  grep.py  hash_crack.py  hash_id.py  hash_tool.py  header_analysis.py  http.py  (+42 more)
gemi/ui/: __init__.py  banner.py  glyphs.py  permission_prompt.py  picker.py  prompt.py  render.py  render_compact.py  spinner.py  theme.py  tips.py  todo_widget.py  welcome.py
