[project]
name = "gemi-cli"
version = "0.1.0"
description = "Gemi — local-fleet AI coding assistant. Multi-agent CLI with MCP, hooks, plugins, sub-agents, autopilot, free-API tools, and a comprehensive cybersecurity toolkit."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Ahmed Elghazali" }
]
keywords = ["llm", "cli", "local-llm", "mcp", "agents", "autopilot", "cybersecurity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Terminals",
]
dependencies = [
    "rich>=13.7",
    "prompt-toolkit>=3.0",
    "httpx>=0.27",
    "questionary>=2.0",      # Claude-Code-style numbered/arrow-nav permission prompts
    "pygments>=2.17",        # Syntax highlighting (rich uses it; pin so we don't lose it)
    "pyperclip>=1.8",        # Clipboard tool for the snippet/copy commands
    "watchdog>=4.0",         # File-change watching for `watch` tool
    "platformdirs>=4.2",     # Cross-platform user-data dirs for ~/.gemi
    "PyYAML>=6.0",           # YAML tools, hook configs
    "tomli-w>=1.0; python_version < '3.11'",  # TOML write fallback (3.11+ uses tomllib)
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
gemi = "gemi.__main__:main"

[project.urls]
Repository = "https://github.com/space-kitty-o/gemi"
Issues = "https://github.com/space-kitty-o/gemi/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gemi*"]
exclude = ["tests*", "examples*", "scripts*", "_*"]

[tool.setuptools.package-data]
gemi = ["templates/*.jinja"]
